[package]
name = "isabelle-plugin-security"
version = "1.18.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm", tag = "1.10.0" }
isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api", tag = "1.23.0" }
log = "0.4.0"
serde_urlencoded = "0.7.1"
image = "0.25.10"
# Phase 3 actor-mode entry point (`register_actor`) needs to spawn a tokio
# task on actix's current-thread runtime and create mpsc channels.
actix-rt = "2.10.0"
tokio = { version = "1.37", features = ["sync"] }
